--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-reveal": "^1.2.2",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.0",
     "react-tsparticles": "^1.34.0",
     "react-zmage": "^0.8.5-beta.36",
+    "sass": "^1.49.10",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
